--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Reversible Computation (RC)</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="shortcut icon" href="/images/favicon/favicon.ico">
   <link rel="icon" sizes="16x16 32x32 64x64" href="/images/favicon/favicon.ico">
   <link rel="icon" type="image/png" sizes="196x196" href="/images/favicon/favicon-192.png">
@@ -43,20 +43,20 @@
         <div class="nav">
           <nav>
             <ul>
-              <li><a href="/">Home</a></li>
-              <li><a href="/registration">Registration</a></li>
-              <li><a href="/accepted">Accepted Papers</a></li>
-              <li><a href="/invited">Invited Talks</a></li>
-              <li><a href="/program">Programme</a></li>
-              <li><a href="/cfp">Call For Papers</a></li>
-              <li><a href="/submission">Paper Submission</a></li>
-              <li><a href="/pc">Programme Committee</a></li>
-              <li><a href="/location">Location</a></li>
-              <li><a href="/social">Social Event</a></li>
-              <li><a href="/accommodation">Accommodation</a></li>
-              <li><a href="/steering">Steering Committee</a></li>
-              <li><a href="/previous">Previous Editions</a></li>
-              <li><a href="/contact">Contact</a></li>
+              <li>Home</li>
+              <li>Registration</li>
+              <li>Accepted Papers</li>
+              <li>Invited Talks</li>
+              <li>Programme</li>
+              <li>Call For Papers</li>
+              <li>Paper Submission</li>
+              <li>Programme Committee</li>
+              <li>Location</li>
+              <li>Social Event</li>
+              <li>Accommodation</li>
+              <li>Steering Committee</li>
+              <li>Previous Editions</li>
+              <li>Contact</li>
             </ul>
           </nav>
         </div>
@@ -66,20 +66,8 @@
 </div>
 
 <h1>Welcome to the<br/>12th Conference on Reversible Computation</h1>
-<h2>July 9 - July 10, 2020, Oslo, Norway</h2>
+<h2>July 7 - July 9, 2021, Nagoya, Japan</h2>
 
-<p>
-  <strong>
-    Due to the current health situation and travel regulations in Europe,
-    RC2020 will be held online.  Accepted papers will be published as planned.
-    The authors of accepted papers will present their talks and discuss them
-    with the conference participants online.
-    <br/>
-    <br/>
-    We were looking forward to welcoming everyone in Oslo in July, and will do
-    our best to organize a fruitful online event instead.
-  </strong>
-</p>
 <p>
   The Conference on Reversible Computation will bring together researchers from
   computer science, mathematics, engineering, and physics to discuss new
@@ -87,15 +75,6 @@
   Reversible Computation. This particularly includes applications of
   reversibility in quantum computation. Research papers, tool demonstrations,
   and work-in-progress reports are within the scope of the conference.
-</p>
-
-<p>
-  The conference proceedings are published by Springer as <a href="https://doi.org/10.1007/978-3-030-52482-1" target="_blank">Lecture Notes in
-  Computer Science (LNCS) volume 12227</a>.
-</p>
-
-<p>
-  Previous editions of this event took place as workshop in York (2009), Bremen (2010), Gent (2011), Copenhagen (2012), and as conference in Victoria (2013), Kyoto (2014), Grenoble (2015), Bologna (2016), Kolkata (2017), Leicester (2018), and Lausanne (2019).
 </p>
 
 <p>
@@ -114,26 +93,17 @@
           </div>
           <div class="dates">
             <b>Important dates:</b><br/><br/>
-            Abstract submission:<br/>
-            February 7, 2020<br/><br/>
-            Submission deadline:<br/>
-            February 14, 2020<br/><br/>
-            Notification to authors:<br/>
-            March 20, 2020<br/><br/>
-            Final version:<br/>
-            April 10, 2020<br/><br/>
-            Conference:<br/>
-            July 9 - July 10, 2020<br/><br/>
+           TBA
           </div>
           <div class="organizers">
             <b>General Chair:</b><br/><br/>
-            Rudolf Schlatte<br/>
-            <i>University of Oslo, Norway</i><br/><br/>
+            Shoji Yuen<br/>
+            <i>Nagoya University, Japan</i><br/><br/>
             <b>Program Chairs:</b><br/><br/>
-            Ivan Lanese<br/>
-            <i>University of Bologna/INRIA, Italy</i><br/><br/>
-            Mariusz Rawski<br/>
-            <i>Warsaw University of Technology, Poland</i>
+            Shigeru Yamashita<br/>
+            <i>Ritsumeikan University, Japan</i><br/><br/>
+            Tetsuo Yokoyama<br/>
+            <i>Nanzan University, Japan</i>
           </div>
           <a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>
         </div>
