--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <meta name="msapplication-config" content="/browserconfig.xml">
 </head>
 <body>
-  <div class="all">
+  <!--<div class="all">
     <div class="content">
       <div class="top-logo">
   <div class="top-logo-abbrev">RC<span class="year">2020</span></div>
@@ -63,7 +63,7 @@
         <div class="middle">
           <div class="title">
   Home
-</div>
+</div>-->
 
 <h1>Welcome to the<br/>12th Conference on Reversible Computation</h1>
 <h2>July 7 - July 9, 2021, Nagoya, Japan</h2>
