--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 <h1>Welcome to the<br/>12th Conference on Reversible Computation</h1>
 <h2>July 7 - July 9, 2021, Nagoya, Japan</h2>
 
+  <p>Under construction</p>
+  
 <p>
   The Conference on Reversible Computation will bring together researchers from
   computer science, mathematics, engineering, and physics to discuss new
