--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
           <a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>
         </div>
       </div>
-      <div class="footer">
+<!--      <div class="footer">
         <a href="/impress">Impress</a> | <a href="/contact">Contact</a>
-      </div>
+      </div> -->
     </div>
   </div>
 </body>
