--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
   Home
 </div>-->
 
+  <h3>(The page is under construction)</h3>  
+  
 <h1>Welcome to the<br/>12th Conference on Reversible Computation</h1>
 <h2>July 7 - July 9, 2021, Nagoya, Japan</h2>
 
-  <p>Under construction</p>
+
   
 <p>
   The Conference on Reversible Computation will bring together researchers from
