--- a/index.html
+++ b/index.html
@@ -117,5 +117,6 @@
       </div> -->
     </div>
   </div>
+<a href="http://reversible-computation-2020.github.io">RC2020 web page</a>
 </body>
 </html>
