--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
       </div> -->
     </div>
   </div>
+<div class="footer">
 <a href="http://reversible-computation-2020.github.io">RC2020 web page</a>
+</div>
 </body>
 </html>
