style file application

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Reversible Computation (RC)</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <link rel="shortcut icon" href="/images/favicon/favicon.ico">
   <link rel="icon" sizes="16x16 32x32 64x64" href="/images/favicon/favicon.ico">
   <link rel="icon" type="image/png" sizes="196x196" href="/images/favicon/favicon-192.png">
@@ -28,14 +28,14 @@
   <meta name="msapplication-config" content="/browserconfig.xml">
 </head>
 <body>
-  <!--<div class="all">
+  <div class="all">
     <div class="content">
       <div class="top-logo">
-  <div class="top-logo-abbrev">RC<span class="year">2020</span></div>
+  <div class="top-logo-abbrev">RC<span class="year">2021</span></div>
   <div class="top-logo-info">
     <span class="edition">13th International Conference on</span><br />
     <span class="name">Reversible Computation (RC)</span><br />
-    <span class="date-place">July 7 - July 9, 2020, Oslo, Norway</span>
+    <span class="date-place">July 7 - July 9, 2021, Nagoya, Japan</span>
   </div>
 </div>
 
@@ -43,35 +43,43 @@
         <div class="nav">
           <nav>
             <ul>
-              <li>Home</li>
-              <li>Registration</li>
-              <li>Accepted Papers</li>
-              <li>Invited Talks</li>
-              <li>Programme</li>
-              <li>Call For Papers</li>
-              <li>Paper Submission</li>
-              <li>Programme Committee</li>
-              <li>Location</li>
-              <li>Social Event</li>
-              <li>Accommodation</li>
-              <li>Steering Committee</li>
-              <li>Previous Editions</li>
-              <li>Contact</li>
+              <li><a href="/">Home</a></li>
+              <li><!--<a href="/registration">-->Registration</a></li>
+              <li><!--<a href="/accepted">-->Accepted Papers</a></li>
+              <li><!--<a href="/invited">-->Invited Talks</a></li>
+              <li><!--<a href="/program">-->Programme</a></li>
+              <li><!--<a href="/cfp">-->Call For Papers</a></li>
+              <li><!--<a href="/submission">-->Paper Submission</a></li>
+              <li><!--<a href="/pc">-->Programme Committee</a></li>
+              <li><!--<a href="/location">-->Location</a></li>
+              <li><!--<a href="/social">-->Social Event</a></li>
+              <li><!--<a href="/accommodation">-->Accommodation</a></li>
+              <li><!--<a href="/steering">-->Steering Committee</a></li>
+              <li><!--<a href="/previous">-->Previous Editions</a></li>
+              <li><!--<a href="/contact">-->Contact</a></li>
             </ul>
           </nav>
         </div>
         <div class="middle">
           <div class="title">
   Home
-</div>-->
+</div>
 
-   
-  
 <h1>Welcome to the<br/>13th Conference on Reversible Computation</h1>
 <h2>July 7 - July 9, 2021, Nagoya, Japan</h2>
 
-<h3>(The page is under construction)</h3> 
-  
+<!--<p>
+  <strong>
+    Due to the current health situation and travel regulations in Europe,
+    RC2020 will be held online.  Accepted papers will be published as planned.
+    The authors of accepted papers will present their talks and discuss them
+    with the conference participants online.
+    <br/>
+    <br/>
+    We were looking forward to welcoming everyone in Oslo in July, and will do
+    our best to organize a fruitful online event instead.
+  </strong>
+</p>-->
 <p>
   The Conference on Reversible Computation will bring together researchers from
   computer science, mathematics, engineering, and physics to discuss new
@@ -81,9 +89,22 @@
   and work-in-progress reports are within the scope of the conference.
 </p>
 
+<!--<p>
+  The conference proceedings are published by Springer as <a href="https://doi.org/10.1007/978-3-030-52482-1" target="_blank">Lecture Notes in
+  Computer Science (LNCS) volume 12227</a>.
+</p>-->
+
 <p>
-  <strong>RC2021 will take place in <a href="RC2021-info.pdf">July 2021 in Nagoya, Japan</a>.</strong>
+  Previous editions of this event took place as workshop in York (2009), Bremen (2010), Gent (2011), Copenhagen (2012), and as conference in Victoria (2013), Kyoto (2014), Grenoble (2015), Bologna (2016), Kolkata (2017), Leicester (2018), Lausanne (2019), and Oslo (2020).
 </p>
+
+
+<p>
+  <a href="rc2021-info.pdf">Brief information:RC2021</a>
+</p>
+<!--<p>
+  <strong>RC2021 will take place in <a href="RC2021-info.pdf">July 2021 in Nagoya, Japan</a>.</strong>
+</p>-->
 
 <!-- <p> -->
 <!--   <b>Get free access for the proceedings <a href="https://link.springer.com/book/10.1007/978-3-030-21500-2" target="_blank">here</a>.</b> -->
@@ -97,7 +118,17 @@
           </div>
           <div class="dates">
             <b>Important dates:</b><br/><br/>
-           TBA
+            TBA
+            <!--Abstract submission:<br/>
+            February 7, 2020<br/><br/>
+            Submission deadline:<br/>
+            February 14, 2020<br/><br/>
+            Notification to authors:<br/>
+            March 20, 2020<br/><br/>
+            Final version:<br/>
+            April 10, 2020<br/><br/>
+            Conference:<br/>
+            July 9 - July 10, 2020<br/><br/>-->
           </div>
           <div class="organizers">
             <b>General Chair:</b><br/><br/>
@@ -109,17 +140,13 @@
             Tetsuo Yokoyama<br/>
             <i>Nanzan University, Japan</i>
           </div>
-          <a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>
+          <!--<a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>-->
         </div>
       </div>
-<!--      <div class="footer">
+      <div class="footer">
         <a href="/impress">Impress</a> | <a href="/contact">Contact</a>
-      </div> -->
+      </div>
     </div>
   </div>
-<br/>
-<div class="footer">
-<a href="http://reversible-computation-2020.github.io">RC2020 web page</a>
-</div>
 </body>
 </html>
