--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 
 <p>
-  <a href="rc2021-info.pdf">Brief information:RC2021</a>
+  <a href="RC2021-info.pdf">Brief information:RC2021</a>
 </p>
 <!--<p>
   <strong>RC2021 will take place in <a href="RC2021-info.pdf">July 2021 in Nagoya, Japan</a>.</strong>
