--- a/contact/index.html
+++ b/contact/index.html
@@ -44,19 +44,19 @@
           <nav>
             <ul>
               <li><a href="/">Home</a></li>
-              <li><a href="/registration">Registration</a></li>
-              <li><a href="/accepted">Accepted Papers</a></li>
-              <li><a href="/invited">Invited Talks</a></li>
-              <li><a href="/program">Programme</a></li>
-              <li><a href="/cfp">Call For Papers</a></li>
-              <li><a href="/submission">Paper Submission</a></li>
-              <li><a href="/pc">Programme Committee</a></li>
-              <li><a href="/location">Location</a></li>
-              <li><a href="/social">Social Event</a></li>
-              <li><a href="/accommodation">Accommodation</a></li>
-              <li><a href="/steering">Steering Committee</a></li>
-              <li><a href="/previous">Previous Editions</a></li>
-              <li><a href="/contact">Contact</a></li>
+              <li><!--<a href="/registration">-->Registration</a></li>
+              <li><!--<a href="/accepted">-->Accepted Papers</a></li>
+              <li><!--<a href="/invited">-->Invited Talks</a></li>
+              <li><!--<a href="/program">-->Programme</a></li>
+              <li><!--<a href="/cfp">-->Call For Papers</a></li>
+              <li><!--<a href="/submission">-->Paper Submission</a></li>
+              <li><!--<a href="/pc">-->Programme Committee</a></li>
+              <li><!--<a href="/location">-->Location</a></li>
+              <li><!--<a href="/social">-->Social Event</a></li>
+              <li><!--<a href="/accommodation">-->Accommodation</a></li>
+              <li><!--<a href="/steering">-->Steering Committee</a></li>
+              <li><!--<a href="/previous">-->Previous Editions</a></li>
+              <li><!--<a href="/contact">-->Contact</a></li>
             </ul>
           </nav>
         </div>
@@ -72,20 +72,20 @@
     (<a href="mailto:info@reversible-computation.org">info@reversible-computation.org</a>).
 </p>
 
-<b>Rudolf Schlatte</b><br />
-University of Oslo, Norway<br />
+<b>Shoji Yuen</b><br />
+Nagoya University, Japan<br />
 General Chair<br />
-<a href="mailto:rudi@ifi.uio.no">rudi@ifi.uio.no</a><br /><br />
+yuen[at]i.nagoya-u.ac.jp<br /><br />
 
-<b>Ivan Lanese</b><br />
-University of Bologna/INRIA, Italy<br />
+<b>Shigeru Yamashita</b><br />
+Ritsumeikan University, Japan<br />
 PC Chair<br />
-<a href="mailto:ivan.lanese@gmail.com">ivan.lanese@gmail.com</a><br /><br />
+ger@cs.ritsumei.ac.jp<br /><br />
 
-<b>Mariusz Rawski</b><br />
-Warsaw University of Technology, Poland<br />
+<b>Tetsuo Yokoyama</b><br />
+Nanzan University, Japan<br />
 PC Chair<br />
-<a href="mailto:m.rawski@tele.pw.edu.pl">m.rawski@tele.pw.edu.pl</a><br /><br />
+tetsuo@nanzan.ac.jp<br /><br />
 
         </div>
         <div class="right">
@@ -95,7 +95,8 @@ PC Chair<br />
           </div>
           <div class="dates">
             <b>Important dates:</b><br/><br/>
-            Abstract submission:<br/>
+            TBA
+            <!--Abstract submission:<br/>
             February 7, 2020<br/><br/>
             Submission deadline:<br/>
             February 14, 2020<br/><br/>
@@ -104,23 +105,23 @@ PC Chair<br />
             Final version:<br/>
             April 10, 2020<br/><br/>
             Conference:<br/>
-            July 9 - July 10, 2020<br/><br/>
+            July 9 - July 10, 2020<br/><br/>-->
           </div>
           <div class="organizers">
             <b>General Chair:</b><br/><br/>
-            Rudolf Schlatte<br/>
-            <i>University of Oslo, Norway</i><br/><br/>
+            Shoji Yuen<br/>
+            <i>Nagoya University, Japan</i><br/><br/>
             <b>Program Chairs:</b><br/><br/>
-            Ivan Lanese<br/>
-            <i>University of Bologna/INRIA, Italy</i><br/><br/>
-            Mariusz Rawski<br/>
-            <i>Warsaw University of Technology, Poland</i>
+            Shigeru Yamashita<br/>
+            <i>Ritsumeikan University, Japan</i><br/><br/>
+            Tetsuo Yokoyama<br/>
+            <i>Nanzan University, Japan</i>
           </div>
-          <a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>
+          <!--<a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>-->
         </div>
       </div>
       <div class="footer">
-        <a href="/impress">Impress</a> | <a href="/contact">Contact</a>
+        <a href="/">Impress</a> | <a href="/contact">Contact</a>
       </div>
     </div>
   </div>
