--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
       </div>
       <div class="footer">
-        <a href="/impress">Impress</a> | <a href="/contact">Contact</a>
+        <a href="/">Impress</a> | <a href="/contact">Contact</a>
       </div>
     </div>
   </div>
