--- a/contact/index.html
+++ b/contact/index.html
@@ -56,7 +56,7 @@
               <li><!--<a href="/accommodation">-->Accommodation</a></li>
               <li><!--<a href="/steering">-->Steering Committee</a></li>
               <li><!--<a href="/previous">-->Previous Editions</a></li>
-              <li><!--<a href="/contact">-->Contact</a></li>
+              <li><a href="/contact">Contact</a></li>
             </ul>
           </nav>
         </div>
@@ -66,8 +66,8 @@
 <h1>Contact</h1>
 
 <p>
-    The 12th Conference on Reversible Computation is organized by the
-    Department of Informatics, University of Oslo, Norway. If you have
+    The 13th Conference on Reversible Computation is organized by the
+    Graduate School of Informatics, Nagoya University, Japan. If you have
     questions, please do not hesitate to contact us
     (<a href="mailto:info@reversible-computation.org">info@reversible-computation.org</a>).
 </p>
