mail address change

--- a/contact/index.html
+++ b/contact/index.html
@@ -80,12 +80,12 @@ yuen[at]i.nagoya-u.ac.jp<br /><br />
 <b>Shigeru Yamashita</b><br />
 Ritsumeikan University, Japan<br />
 PC Chair<br />
-ger@cs.ritsumei.ac.jp<br /><br />
+ger[at]cs.ritsumei.ac.jp<br /><br />
 
 <b>Tetsuo Yokoyama</b><br />
 Nanzan University, Japan<br />
 PC Chair<br />
-tetsuo@nanzan.ac.jp<br /><br />
+tetsuo[at]nanzan.ac.jp<br /><br />
 
         </div>
         <div class="right">
