--- a/previous/index.html
+++ b/previous/index.html
@@ -31,12 +31,12 @@
   <div class="all">
     <div class="content">
       <div class="top-logo">
-  <div class="top-logo-abbrev">RC<span class="year">2020</span></div>
-  <div class="top-logo-info">
-    <span class="edition">12th International Conference on</span><br />
-    <span class="name">Reversible Computation (RC)</span><br />
-    <span class="date-place">July 9 - July 10, 2020, Oslo, Norway</span>
-  </div>
+        <div class="top-logo-abbrev">RC<span class="year">2021</span></div>
+        <div class="top-logo-info">
+          <span class="edition">13th International Conference on</span><br />
+          <span class="name">Reversible Computation (RC)</span><br />
+          <span class="date-place">July 7 - July 9, 2021, Nagoya, Japan</span>
+        </div>
 </div>
 
       <div class="main">
@@ -44,17 +44,17 @@
           <nav>
             <ul>
               <li><a href="/">Home</a></li>
-              <li><a href="/registration">Registration</a></li>
-              <li><a href="/accepted">Accepted Papers</a></li>
-              <li><a href="/invited">Invited Talks</a></li>
-              <li><a href="/program">Programme</a></li>
-              <li><a href="/cfp">Call For Papers</a></li>
-              <li><a href="/submission">Paper Submission</a></li>
-              <li><a href="/pc">Programme Committee</a></li>
-              <li><a href="/location">Location</a></li>
-              <li><a href="/social">Social Event</a></li>
-              <li><a href="/accommodation">Accommodation</a></li>
-              <li><a href="/steering">Steering Committee</a></li>
+              <li><!--<a href="/registration">-->Registration</a></li>
+              <li><!--<a href="/accepted">-->Accepted Papers</a></li>
+              <li><!--<a href="/invited">-->Invited Talks</a></li>
+              <li><!--<a href="/program">-->Programme</a></li>
+              <li><!--<a href="/cfp">-->Call For Papers</a></li>
+              <li><!--<a href="/submission">-->Paper Submission</a></li>
+              <li><!--<a href="/pc">-->Programme Committee</a></li>
+              <li><!--<a href="/location">-->Location</a></li>
+              <li><!--<a href="/social">-->Social Event</a></li>
+              <li><!--<a href="/accommodation">-->Accommodation</a></li>
+              <li><!--<a href="/steering">-->Steering Committee</a></li>
               <li><a href="/previous">Previous Editions</a></li>
               <li><a href="/contact">Contact</a></li>
             </ul>
@@ -185,7 +185,8 @@
           </div>
           <div class="dates">
             <b>Important dates:</b><br/><br/>
-            Abstract submission:<br/>
+            TBA
+            <!--Abstract submission:<br/>
             February 7, 2020<br/><br/>
             Submission deadline:<br/>
             February 14, 2020<br/><br/>
@@ -194,19 +195,19 @@
             Final version:<br/>
             April 10, 2020<br/><br/>
             Conference:<br/>
-            July 9 - July 10, 2020<br/><br/>
+            July 9 - July 10, 2020<br/><br/>-->
           </div>
           <div class="organizers">
             <b>General Chair:</b><br/><br/>
-            Rudolf Schlatte<br/>
-            <i>University of Oslo, Norway</i><br/><br/>
+            Shoji Yuen<br/>
+            <i>Nagoya University, Japan</i><br/><br/>
             <b>Program Chairs:</b><br/><br/>
-            Ivan Lanese<br/>
-            <i>University of Bologna/INRIA, Italy</i><br/><br/>
-            Mariusz Rawski<br/>
-            <i>Warsaw University of Technology, Poland</i>
+            Shigeru Yamashita<br/>
+            <i>Ritsumeikan University, Japan</i><br/><br/>
+            Tetsuo Yokoyama<br/>
+            <i>Nanzan University, Japan</i>
           </div>
-          <a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>
+          <!--<a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>-->
         </div>
       </div>
       <div class="footer">
