--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <li><!--<a href="/social">-->Social Event</a></li>
               <li><!--<a href="/accommodation">-->Accommodation</a></li>
               <li><!--<a href="/steering">-->Steering Committee</a></li>
-              <li><!--<a href="/previous">-->Previous Editions</a></li>
+              <li><a href="/previous">Previous Editions</a></li>
               <li><a href="/contact">Contact</a></li>
             </ul>
           </nav>
