steering committee page

--- a/previous/index.html
+++ b/previous/index.html
@@ -54,7 +54,7 @@
               <li><!--<a href="/location">-->Location</a></li>
               <li><!--<a href="/social">-->Social Event</a></li>
               <li><!--<a href="/accommodation">-->Accommodation</a></li>
-              <li><!--<a href="/steering">-->Steering Committee</a></li>
+              <li><a href="/steering">Steering Committee</a></li>
               <li><a href="/previous">Previous Editions</a></li>
               <li><a href="/contact">Contact</a></li>
             </ul>
@@ -66,6 +66,16 @@
 <h1>Previous Editions</h1>
 
 <table class="previous">
+  <tr>
+    <td><img width="100" src="/images/pe2020.png" /></td>
+    <td>
+      <a href="http://reversible-computation-2020.github.io/" target="_blank">12th Conference on Reversible Computation
+        (RC 2020)</a><br />
+      (Oslo, Norway)<br /><br />
+      Papers have been published in <a href="https://link.springer.com/book/10.1007/978-3-030-52482-1" target="_blank">Springer's
+        Lecture Notes in Computer Science (LNCS)</a> Volume 12227.
+    </td>
+  </tr>
   <tr>
     <td><img src="/images/pe2019.gif" /></td>
     <td>
