--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             Final version:<br/>
             April 17, 2021<br/><br/>
             Conference:<br/>
-            July 7 - July 9, 2021<br/><br/>-->
+            July 7 - July 9, 2021<br/><br/>
           </div>
           <div class="organizers">
             <b>General Chair:</b><br/><br/>
