call for papers

--- a/cfp/index.html
+++ b/cfp/index.html
@@ -100,20 +100,19 @@
   Papers can be submitted electronically in pdf via the RC 2020 interface of the EasyChair system:  <a href="https://easychair.org/conferences/?conf=rc2020">https://easychair.org/conferences/?conf=rc2020</a>
 </p>
 
-<h2>Special Issue</h2>
+<!--<h2>Special Issue</h2>
 
 <p>
   Authors of best papers will be invited to submit an extended version of their work to a special issue to be published in Science of Computer Programming (Elsevier).
-</p>
+</p>-->
 
 <h2>Important Dates:</h2>
 
-Abstract submission: February 7, 2020<br />
-Submission deadline: February 14, 2020<br />
-Notification to authors: March 20, 2020<br />
-Final version: April 10, 2020<br />
-Conference: July 9 - July 10, 2020<br />
-<!-- IWLS: June 21 &ndash; 22, 2019 -->
+Abstract submission: February 14, 2021<br />
+Submission deadline: February 21, 2021<br />
+Notification to authors: March 27, 2021<br />
+Final version: April 17, 2021<br />
+Conference: July 7 - July 9, 2021<br />
 
         </div>
         <div class="right">
@@ -124,27 +123,27 @@ Conference: July 9 - July 10, 2020<br />
           <div class="dates">
             <b>Important dates:</b><br/><br/>
             Abstract submission:<br/>
-            February 7, 2020<br/><br/>
+            February 14, 2021<br/><br/>
             Submission deadline:<br/>
-            February 14, 2020<br/><br/>
+            February 21, 2021<br/><br/>
             Notification to authors:<br/>
-            March 20, 2020<br/><br/>
+            March 27, 2021<br/><br/>
             Final version:<br/>
-            April 10, 2020<br/><br/>
+            April 17, 2021<br/><br/>
             Conference:<br/>
-            July 9 - July 10, 2020<br/><br/>
+            July 7 - July 9, 2021<br/><br/>
           </div>
           <div class="organizers">
             <b>General Chair:</b><br/><br/>
-            Rudolf Schlatte<br/>
-            <i>University of Oslo, Norway</i><br/><br/>
+            Shoji Yuen<br/>
+            <i>Nagoya University, Japan</i><br/><br/>
             <b>Program Chairs:</b><br/><br/>
-            Ivan Lanese<br/>
-            <i>University of Bologna/INRIA, Italy</i><br/><br/>
-            Mariusz Rawski<br/>
-            <i>Warsaw University of Technology, Poland</i>
+            Shigeru Yamashita<br/>
+            <i>Ritsumeikan University, Japan</i><br/><br/>
+            Tetsuo Yokoyama<br/>
+            <i>Nanzan University, Japan</i>
           </div>
-          <a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>
+          <!--<a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>-->
         </div>
       </div>
       <div class="footer">
