--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <li><!--<a href="/accepted">-->Accepted Papers</a></li>
               <li><!--<a href="/invited">-->Invited Talks</a></li>
               <li><!--<a href="/program">-->Programme</a></li>
-              <li><!--<a href="/cfp">-->Call For Papers</a></li>
+              <li><a href="/cfp">Call For Papers</a></li>
               <li><!--<a href="/submission">-->Paper Submission</a></li>
               <li><!--<a href="/pc">-->Programme Committee</a></li>
               <li><!--<a href="/location">-->Location</a></li>
@@ -99,9 +99,9 @@
 </p>
 
 
-<p>
+<!--<p>
   <a href="RC2021-info.pdf">Brief information:RC2021</a>
-</p>
+</p>-->
 <!--<p>
   <strong>RC2021 will take place in <a href="RC2021-info.pdf">July 2021 in Nagoya, Japan</a>.</strong>
 </p>-->
