--- a/previous/index.html
+++ b/previous/index.html
@@ -48,7 +48,7 @@
               <li><!--<a href="/accepted">-->Accepted Papers</a></li>
               <li><!--<a href="/invited">-->Invited Talks</a></li>
               <li><!--<a href="/program">-->Programme</a></li>
-              <li><!--<a href="/cfp">-->Call For Papers</a></li>
+              <li><a href="/cfp">Call For Papers</a></li>
               <li><!--<a href="/submission">-->Paper Submission</a></li>
               <li><!--<a href="/pc">-->Programme Committee</a></li>
               <li><!--<a href="/location">-->Location</a></li>
@@ -195,17 +195,16 @@
           </div>
           <div class="dates">
             <b>Important dates:</b><br/><br/>
-            TBA
-            <!--Abstract submission:<br/>
-            February 7, 2020<br/><br/>
+            Abstract submission:<br/>
+            February 14, 2021<br/><br/>
             Submission deadline:<br/>
-            February 14, 2020<br/><br/>
+            February 21, 2021<br/><br/>
             Notification to authors:<br/>
-            March 20, 2020<br/><br/>
+            March 27, 2021<br/><br/>
             Final version:<br/>
-            April 10, 2020<br/><br/>
+            April 17, 2021<br/><br/>
             Conference:<br/>
-            July 9 - July 10, 2020<br/><br/>-->
+            July 7 - July 9, 2021<br/><br/>
           </div>
           <div class="organizers">
             <b>General Chair:</b><br/><br/>
