--- a/cfp/index.html
+++ b/cfp/index.html
@@ -31,11 +31,11 @@
   <div class="all">
     <div class="content">
       <div class="top-logo">
-  <div class="top-logo-abbrev">RC<span class="year">2020</span></div>
+  <div class="top-logo-abbrev">RC<span class="year">2021</span></div>
   <div class="top-logo-info">
-    <span class="edition">12th International Conference on</span><br />
+    <span class="edition">13th International Conference on</span><br />
     <span class="name">Reversible Computation (RC)</span><br />
-    <span class="date-place">July 9 - July 10, 2020, Oslo, Norway</span>
+    <span class="date-place">July 7 - July 9, 2021, Nagoya, Japan</span>
   </div>
 </div>
 
@@ -44,16 +44,16 @@
           <nav>
             <ul>
               <li><a href="/">Home</a></li>
-              <li><a href="/registration">Registration</a></li>
-              <li><a href="/accepted">Accepted Papers</a></li>
-              <li><a href="/invited">Invited Talks</a></li>
-              <li><a href="/program">Programme</a></li>
+              <li><!--<a href="/registration">-->Registration</a></li>
+              <li><!--<a href="/accepted">-->Accepted Papers</a></li>
+              <li><!--<a href="/invited">-->Invited Talks</a></li>
+              <li><!--<a href="/program">-->Programme</a></li>
               <li><a href="/cfp">Call For Papers</a></li>
-              <li><a href="/submission">Paper Submission</a></li>
-              <li><a href="/pc">Programme Committee</a></li>
-              <li><a href="/location">Location</a></li>
-              <li><a href="/social">Social Event</a></li>
-              <li><a href="/accommodation">Accommodation</a></li>
+              <li><!--<a href="/submission">-->Paper Submission</a></li>
+              <li><!--<a href="/pc">-->Programme Committee</a></li>
+              <li><!--<a href="/location">-->Location</a></li>
+              <li><!--<a href="/social">-->Social Event</a></li>
+              <li><!--<a href="/accommodation">-->Accommodation</a></li>
               <li><a href="/steering">Steering Committee</a></li>
               <li><a href="/previous">Previous Editions</a></li>
               <li><a href="/contact">Contact</a></li>
