--- a/cfp/index.html
+++ b/cfp/index.html
@@ -95,9 +95,17 @@
 </ul>
 
 <p>
-  Interested researchers are invited to submit full research papers (16 pages maximum), tutorials (16 pages maximum), as well as work-in-progress or tool demonstration papers (6 pages maximum) in Springer LNCS format.  Additional material intended for reviewers but not for publication in the final version---for example, details of proofs---may be placed in a clearly marked appendix that is not included in the page limit. Reviewers are at liberty to ignore appendices and papers must be understandable without them. Contributions must be written in English and report on original, unpublished work, not submitted for publication elsewhere. Submissions not adhering to the specified constraints may be rejected without review. Each paper will undergo a peer review of at least 3 anonymous reviewers. All accepted papers will be included in the conference proceedings and published by Springer as a Lecture Notes in Computer Science (LNCS) volume.
+  Interested researchers are invited to submit
+  
+  <ul>
+    <li>full research papers (16 pages maximum), </li>
+    <li>tutorials (16 pages maximum), </li>
+    <li>work-in-progress or tool demonstration papers (6 pages maximum)</li>
+  </ul>
+  
+  in Springer LNCS format.  Additional material intended for reviewers but not for publication in the final version---for example, details of proofs---may be placed in a clearly marked appendix that is not included in the page limit. Reviewers are at liberty to ignore appendices and papers must be understandable without them. Contributions must be written in English and report on original, unpublished work, not submitted for publication elsewhere. Submissions not adhering to the specified constraints may be rejected without review.
 
-  Papers can be submitted electronically in pdf via the RC 2020 interface of the EasyChair system:  <a href="https://easychair.org/conferences/?conf=rc2020">https://easychair.org/conferences/?conf=rc2020</a>
+<!--Papers can be submitted electronically in pdf via the RC 2020 interface of the EasyChair system:  <a href="https://easychair.org/conferences/?conf=rc2020">https://easychair.org/conferences/?conf=rc2020</a>-->
 </p>
 
 <!--<h2>Special Issue</h2>
