--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <li><!--<a href="/program">-->Programme</a></li>
               <li><a href="/cfp">Call For Papers</a></li>
               <li><!--<a href="/submission">-->Paper Submission</a></li>
-              <li><!--<a href="/pc">-->Programme Committee</a></li>
+              <li><a href="/pc">Programme Committee</a></li>
               <li><!--<a href="/location">-->Location</a></li>
               <li><!--<a href="/social">-->Social Event</a></li>
               <li><!--<a href="/accommodation">-->Accommodation</a></li>
