--- a/pc/index.html
+++ b/pc/index.html
@@ -31,11 +31,11 @@
   <div class="all">
     <div class="content">
       <div class="top-logo">
-  <div class="top-logo-abbrev">RC<span class="year">2020</span></div>
+  <div class="top-logo-abbrev">RC<span class="year">2021</span></div>
   <div class="top-logo-info">
-    <span class="edition">12th International Conference on</span><br />
+    <span class="edition">13th International Conference on</span><br />
     <span class="name">Reversible Computation (RC)</span><br />
-    <span class="date-place">July 9 - July 10, 2020, Oslo, Norway</span>
+    <span class="date-place">July 7 - July 9, 2021, Nagoya, Japan</span>
   </div>
 </div>
 
@@ -44,16 +44,16 @@
           <nav>
             <ul>
               <li><a href="/">Home</a></li>
-              <li><a href="/registration">Registration</a></li>
-              <li><a href="/accepted">Accepted Papers</a></li>
-              <li><a href="/invited">Invited Talks</a></li>
-              <li><a href="/program">Programme</a></li>
+              <li><!--<a href="/registration">-->Registration</a></li>
+              <li><!--<a href="/accepted">-->Accepted Papers</a></li>
+              <li><!--<a href="/invited">-->Invited Talks</a></li>
+              <li><!--<a href="/program">-->Programme</a></li>
               <li><a href="/cfp">Call For Papers</a></li>
-              <li><a href="/submission">Paper Submission</a></li>
+              <li><!--<a href="/submission">-->Paper Submission</a></li>
               <li><a href="/pc">Programme Committee</a></li>
-              <li><a href="/location">Location</a></li>
-              <li><a href="/social">Social Event</a></li>
-              <li><a href="/accommodation">Accommodation</a></li>
+              <li><!--<a href="/location">-->Location</a></li>
+              <li><!--<a href="/social">-->Social Event</a></li>
+              <li><!--<a href="/accommodation">-->Accommodation</a></li>
               <li><a href="/steering">Steering Committee</a></li>
               <li><a href="/previous">Previous Editions</a></li>
               <li><a href="/contact">Contact</a></li>
@@ -67,34 +67,36 @@
 <h2>Program Chairs</h2>
 
 <ul>
-  <li>Ivan Lanese (University of Bologna/INRIA, Italy)</li>
-  <li>Mariusz Rawski (Warsaw University of Technology, Poland)</li>
+  <li>Shigeru Yamashita (Ritsumeikan University, Japan)</li>
+  <li>Tetsuo Yokoyama (Nanzan University, Japan)</li>
 </ul>
 
 <h2>Program Committee</h2>
 
 <ul>
-  <li>Gerhard Dueck (University of New Brunswick, Canada)</li>
+  <li>Gerhard Dueck (University of New Brunswic, Canada)</li>
+  <li>Michael P. Frank (Sandia National Laboratories, US)</li>
   <li>Robert Glück (University of Copenhagen, Denmark)</li>
+  <li>Eva Graversen (Imperial College London, UK)</li>
+  <li>James Hoey (University of Leicester, UK)</li>
   <li>Jarkko Kari (University of Turku, Finland)</li>
   <li>Jean Krivine (CNRS, France)</li>
+  <li>Ivan Lanese (University of Bologna/INRIA, Italy)</li>
   <li>Martin Lukac (Nazarbayev University, Kazakhstan)</li>
-  <li>Kazutaka Matsuda (Tohoku University, Japan)</li>
   <li>Claudio Antares Mezzina (Università di Urbino, Italy)</li>
-  <li>Lukasz Mikulski (Nicolaus Copernicus University, Poland)</li>
-  <li>Torben Ægidius Mogensen (University of Copenhagen, Denmark)</li>
   <li>Claudio Moraga (TU Dortmund University, Germany)</li>
-  <li>Iain Phillips (Imperial College London, UK)</li>
-  <li>Krzysztof Podlaski (University Of Lodz, Poland)</li>
+  <li>Keisuke Nakano (Tohoku University, Japan)</li>
+  <li>Luca Paolini (Universita degli Studi di Torino, Italy)</li>
+  <li>Krzysztof Podlaski (University of Lodz, Poland)</li>
+  <li>Mariusz Rawski (Warsaw University of Technology, Poland)</li>
   <li>Markus Schordan (Lawrence Livermore National Laboratory, US)</li>
-  <li>Peter Selinger (Dalhousie University, Canada)</li>
   <li>Mathias Soeken (Ecole Polytechnique Fédérale de Lausanne, Switzerland)</li>
   <li>Milena Stankovic (University of Nis, Serbia)</li>
   <li>Himanshu Thapliyal (University of Kentucky, US)</li>
+  <li>Michael Kirkedal Thomsen (University of Copenhagen, Denmark)</li>
   <li>Irek Ulidowski (University of Leicester, UK)</li>
-  <li>German Vidal (Universitat Politecnica de Valencia, Spain)</li>
+  <li>Rodney Van Meter (Keio University, Japan)</li>
   <li>Robert Wille (Johannes Kepler University Linz, Austria)</li>
-  <li>Tetsuo Yokoyama (Nanzan University, Japan)</li>
 </ul>
 
         </div>
@@ -106,27 +108,27 @@
           <div class="dates">
             <b>Important dates:</b><br/><br/>
             Abstract submission:<br/>
-            February 7, 2020<br/><br/>
+            February 14, 2021<br/><br/>
             Submission deadline:<br/>
-            February 14, 2020<br/><br/>
+            February 21, 2021<br/><br/>
             Notification to authors:<br/>
-            March 20, 2020<br/><br/>
+            March 27, 2021<br/><br/>
             Final version:<br/>
-            April 10, 2020<br/><br/>
+            April 17, 2021<br/><br/>
             Conference:<br/>
-            July 9 - July 10, 2020<br/><br/>
+            July 7 - July 9, 2021<br/><br/>
           </div>
           <div class="organizers">
             <b>General Chair:</b><br/><br/>
-            Rudolf Schlatte<br/>
-            <i>University of Oslo, Norway</i><br/><br/>
+            Shoji Yuen<br/>
+            <i>Nagoya University, Japan</i><br/><br/>
             <b>Program Chairs:</b><br/><br/>
-            Ivan Lanese<br/>
-            <i>University of Bologna/INRIA, Italy</i><br/><br/>
-            Mariusz Rawski<br/>
-            <i>Warsaw University of Technology, Poland</i>
+            Shigeru Yamashita<br/>
+            <i>Ritsumeikan University, Japan</i><br/><br/>
+            Tetsuo Yokoyama<br/>
+            <i>Nanzan University, Japan</i>
           </div>
-          <a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>
+          <!--<a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>-->
         </div>
       </div>
       <div class="footer">
