add easychair submission link and uncomment /submission link

--- a/cfp/index.html
+++ b/cfp/index.html
@@ -44,16 +44,16 @@
           <nav>
             <ul>
               <li><a href="/">Home</a></li>
-              <li><!--<a href="/registration">-->Registration</a></li>
-              <li><!--<a href="/accepted">-->Accepted Papers</a></li>
-              <li><!--<a href="/invited">-->Invited Talks</a></li>
-              <li><!--<a href="/program">-->Programme</a></li>
+              <li><!--<a href="/registration">-->Registration<!--</a>--></li>
+              <li><!--<a href="/accepted">-->Accepted Papers<!--</a>--></li>
+              <li><!--<a href="/invited">-->Invited Talks<!--</a>--></li>
+              <li><!--<a href="/program">-->Programme<!--</a>--></li>
               <li><a href="/cfp">Call For Papers</a></li>
-              <li><!--<a href="/submission">-->Paper Submission</a></li>
+              <li><a href="/submission">Paper Submission</a></li>
               <li><a href="/pc">Programme Committee</a></li>
-              <li><!--<a href="/location">-->Location</a></li>
-              <li><!--<a href="/social">-->Social Event</a></li>
-              <li><!--<a href="/accommodation">-->Accommodation</a></li>
+              <li><!--<a href="/location">-->Location<!--</a>--></li>
+              <li><!--<a href="/social">-->Social Event<!--</a>--></li>
+              <li><!--<a href="/accommodation">-->Accommodation<!--</a>--></li>
               <li><a href="/steering">Steering Committee</a></li>
               <li><a href="/previous">Previous Editions</a></li>
               <li><a href="/contact">Contact</a></li>
@@ -105,7 +105,7 @@
   
   in Springer LNCS format.  Additional material intended for reviewers but not for publication in the final version---for example, details of proofs---may be placed in a clearly marked appendix that is not included in the page limit. Reviewers are at liberty to ignore appendices and papers must be understandable without them. Contributions must be written in English and report on original, unpublished work, not submitted for publication elsewhere. Submissions not adhering to the specified constraints may be rejected without review.
 
-<!--Papers can be submitted electronically in pdf via the RC 2020 interface of the EasyChair system:  <a href="https://easychair.org/conferences/?conf=rc2020">https://easychair.org/conferences/?conf=rc2020</a>-->
+Papers can be submitted electronically in pdf via the RC 2020 interface of the EasyChair system:  <a href="https://easychair.org/conferences/?conf=rc2020">https://easychair.org/conferences/?conf=rc2021</a>
 </p>
 
 <!--<h2>Special Issue</h2>
