--- a/submission/index.html
+++ b/submission/index.html
@@ -44,16 +44,16 @@
           <nav>
             <ul>
               <li><a href="/">Home</a></li>
-              <li><a href="/registration">Registration</a></li>
-              <li><a href="/accepted">Accepted Papers</a></li>
-              <li><a href="/invited">Invited Talks</a></li>
-              <li><a href="/program">Programme</a></li>
+              <li><!--<a href="/registration">-->Registration<!--</a>--></li>
+              <li><!--<a href="/accepted">-->Accepted Papers<!--</a>--></li>
+              <li><!--<a href="/invited">-->Invited Talks<!--</a>--></li>
+              <li><!--<a href="/program">-->Programme<!--</a>--></li>
               <li><a href="/cfp">Call For Papers</a></li>
               <li><a href="/submission">Paper Submission</a></li>
               <li><a href="/pc">Programme Committee</a></li>
-              <li><a href="/location">Location</a></li>
-              <li><a href="/social">Social Event</a></li>
-              <li><a href="/accommodation">Accommodation</a></li>
+              <li><!--<a href="/location">-->Location<!--</a>--></li>
+              <li><!--<a href="/social">-->Social Event<!--</a>--></li>
+              <li><!--<a href="/accommodation">-->Accommodation<!--</a>--></li>
               <li><a href="/steering">Steering Committee</a></li>
               <li><a href="/previous">Previous Editions</a></li>
               <li><a href="/contact">Contact</a></li>
@@ -109,7 +109,7 @@ href="mailto:info@reversible-computation.org">info@reversible-computation.org</a
 
 <h2>Submission system</h2>
 The papers will be submitted via <a href="https://easychair.org/">EasyChair</a>.
-<!-- In order to submit your paper, please use <a href="https://easychair.org/conferences/?conf=rc20" target="_blank">EasyChair</a>. -->
+In order to submit your paper, please use <a href="https://easychair.org/conferences/?conf=rc2021" target="_blank">EasyChair</a>.
 
         </div>
         <div class="right">
