--- a/submission/index.html
+++ b/submission/index.html
@@ -31,11 +31,11 @@
   <div class="all">
     <div class="content">
       <div class="top-logo">
-  <div class="top-logo-abbrev">RC<span class="year">2020</span></div>
+  <div class="top-logo-abbrev">RC<span class="year">2021</span></div>
   <div class="top-logo-info">
-    <span class="edition">12th International Conference on</span><br />
+    <span class="edition">13th International Conference on</span><br />
     <span class="name">Reversible Computation (RC)</span><br />
-    <span class="date-place">July 9 - July 10, 2020, Oslo, Norway</span>
+    <span class="date-place">July 7 - July 9, 2021, Nagoya, Japan</span>
   </div>
 </div>
 
