--- a/program/index.html
+++ b/program/index.html
@@ -1,83 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Reversible Computation (RC)</title>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="shortcut icon" href="/images/favicon/favicon.ico">
-  <link rel="icon" sizes="16x16 32x32 64x64" href="/images/favicon/favicon.ico">
-  <link rel="icon" type="image/png" sizes="196x196" href="/images/favicon/favicon-192.png">
-  <link rel="icon" type="image/png" sizes="160x160" href="/images/favicon/favicon-160.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="64x64" href="/images/favicon/favicon-64.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16.png">
-  <link rel="apple-touch-icon" href="/images/favicon/favicon-57.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/images/favicon/favicon-114.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/favicon-72.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/images/favicon/favicon-144.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/favicon-60.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/favicon-120.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/favicon-76.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/favicon-152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/favicon-180.png">
-  <meta name="msapplication-TileColor" content="#FFFFFF">
-  <meta name="msapplication-TileImage" content="/images/favicon/favicon-144.png">
-  <meta name="msapplication-config" content="/browserconfig.xml">
-</head>
-<body>
-  <div class="all">
-    <div class="content">
-      <div class="top-logo">
-  <div class="top-logo-abbrev">RC<span class="year">2020</span></div>
-  <div class="top-logo-info">
-    <span class="edition">12th International Conference on</span><br />
-    <span class="name">Reversible Computation (RC)</span><br />
-    <span class="date-place">July 9 - July 10, 2020, Oslo, Norway</span>
-  </div>
-</div>
-
-      <div class="main">
-        <div class="nav">
-          <nav>
-            <ul>
-              <li><a href="/">Home</a></li>
-              <li><a href="/registration">Registration</a></li>
-              <li><a href="/accepted">Accepted Papers</a></li>
-              <li><a href="/invited">Invited Talks</a></li>
-              <li><a href="/program">Programme</a></li>
-              <li><a href="/cfp">Call For Papers</a></li>
-              <li><a href="/submission">Paper Submission</a></li>
-              <li><a href="/pc">Programme Committee</a></li>
-              <li><a href="/location">Location</a></li>
-              <li><a href="/social">Social Event</a></li>
-              <li><a href="/accommodation">Accommodation</a></li>
-              <li><a href="/steering">Steering Committee</a></li>
-              <li><a href="/previous">Previous Editions</a></li>
-              <li><a href="/contact">Contact</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="middle">
-          <div class="title">Programme</div>
-
-<h1>Programme</h1>
+---
+layout: default
+title: Programme
+---
 
 <p>
-  <b>All times are in Oslo time (UTC+02:00).</b>
+  <b>All times are in {{ site.tz.friendly }} time ({{ site.tz.offset }}).</b>
 </p>
 
-  <script type="text/javascript">
-    <!--
-    var a_p = "";
-    var d = new Date();
-    var curr_min = d.getMinutes();
-    var curr_oslohour = d.getUTCHours() + 2;
-    if (curr_oslohour > 23) curr_oslohour = curr_oslohour - 24;
-    document.write("<p>Current Oslo local time is " + String(curr_oslohour).padStart(2, '0') + ":" + String(curr_min).padStart(2, '0') + "</p>");
-//-->
+<p>Current {{ site.tz.friendly }} local time is <span id="local-time">--:--</span></p>
+
+<script type="text/javascript">
+  (function(){
+    var TIMEZONE = "{{ site.tz.iana }}";
+
+    function update_local_time() {
+      // we use en-GB locale to get HH:MM:DD in 24-hour format
+      var el = document.getElementById('local-time');
+      var ts = new Date().toLocaleTimeString('en-GB', {
+        'hour12': false, 
+        'timeZone': TIMEZONE
+      });
+      el.innerText = ts;
+    }
+
+    update_local_time();
+    window.setInterval(update_local_time,500);
+  })();
 </script>
 
 <p>
@@ -239,43 +187,3 @@
   </tr>
   <tr class="special"> <td>16:50&ndash;17:00</td> <td> <div>Closing Session</div> </td> </tr>
 </table>
-
-        </div>
-        <div class="right">
-          <div id="local-imgs">
-            <div class="local-img" id="local-img1"></div>
-            <div class="local-img" id="local-img2"></div>
-          </div>
-          <div class="dates">
-            <b>Important dates:</b><br/><br/>
-            Abstract submission:<br/>
-            February 7, 2020<br/><br/>
-            Submission deadline:<br/>
-            February 14, 2020<br/><br/>
-            Notification to authors:<br/>
-            March 20, 2020<br/><br/>
-            Final version:<br/>
-            April 10, 2020<br/><br/>
-            Conference:<br/>
-            July 9 - July 10, 2020<br/><br/>
-          </div>
-          <div class="organizers">
-            <b>General Chair:</b><br/><br/>
-            Rudolf Schlatte<br/>
-            <i>University of Oslo, Norway</i><br/><br/>
-            <b>Program Chairs:</b><br/><br/>
-            Ivan Lanese<br/>
-            <i>University of Bologna/INRIA, Italy</i><br/><br/>
-            Mariusz Rawski<br/>
-            <i>Warsaw University of Technology, Poland</i>
-          </div>
-          <a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>
-        </div>
-      </div>
-      <div class="footer">
-        <a href="/impress">Impress</a> | <a href="/contact">Contact</a>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
