--- a/steering/index.html
+++ b/steering/index.html
@@ -1,69 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Reversible Computation (RC)</title>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="shortcut icon" href="/images/favicon/favicon.ico">
-  <link rel="icon" sizes="16x16 32x32 64x64" href="/images/favicon/favicon.ico">
-  <link rel="icon" type="image/png" sizes="196x196" href="/images/favicon/favicon-192.png">
-  <link rel="icon" type="image/png" sizes="160x160" href="/images/favicon/favicon-160.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="64x64" href="/images/favicon/favicon-64.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16.png">
-  <link rel="apple-touch-icon" href="/images/favicon/favicon-57.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/images/favicon/favicon-114.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/favicon-72.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/images/favicon/favicon-144.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/favicon-60.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/favicon-120.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/favicon-76.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/favicon-152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/favicon-180.png">
-  <meta name="msapplication-TileColor" content="#FFFFFF">
-  <meta name="msapplication-TileImage" content="/images/favicon/favicon-144.png">
-  <meta name="msapplication-config" content="/browserconfig.xml">
-</head>
-<body>
-  <div class="all">
-    <div class="content">
-      <div class="top-logo">
-        <div class="top-logo-abbrev">RC<span class="year">2021</span></div>
-        <div class="top-logo-info">
-          <span class="edition">13th International Conference on</span><br />
-          <span class="name">Reversible Computation (RC)</span><br />
-          <span class="date-place">July 7 - July 9, 2021, Nagoya, Japan</span>
-        </div>
-      </div>
-
-      <div class="main">
-        <div class="nav">
-          <nav>
-            <ul>
-              <li><a href="/">Home</a></li>
-              <li><!--<a href="/registration">-->Registration</a></li>
-              <li><!--<a href="/accepted">-->Accepted Papers</a></li>
-              <li><!--<a href="/invited">-->Invited Talks</a></li>
-              <li><!--<a href="/program">-->Programme</a></li>
-              <li><a href="/cfp">Call For Papers</a></li>
-              <li><!--<a href="/submission">-->Paper Submission</a></li>
-              <li><a href="/pc">Programme Committee</a></li>
-              <li><!--<a href="/location">-->Location</a></li>
-              <li><!--<a href="/social">-->Social Event</a></li>
-              <li><!--<a href="/accommodation">-->Accommodation</a></li>
-              <li><a href="/steering">Steering Committee</a></li>
-              <li><a href="/previous">Previous Editions</a></li>
-              <li><a href="/contact">Contact</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="middle">
-          <div class="title">Steering Committee</div>
-
-<h1>Steering Committee</h1>
+---
+layout: default
+title: Steering Committee
+---
 
 <p>
   The Steering Committee of the Reversible Computation conference is responsible
@@ -87,43 +25,3 @@
   <li>Irek Ulidowski (University of Leicester, United Kingdom)</li>
   <li>Robert Wille (Johannes Kepler University Linz, Austria)</li>
 </ul>
-
-        </div>
-        <div class="right">
-          <div id="local-imgs">
-            <div class="local-img" id="local-img1"></div>
-            <div class="local-img" id="local-img2"></div>
-          </div>
-          <div class="dates">
-            <b>Important dates:</b><br/><br/>
-            Abstract submission:<br/>
-            February 14, 2021<br/><br/>
-            Submission deadline:<br/>
-            February 21, 2021<br/><br/>
-            Notification to authors:<br/>
-            March 27, 2021<br/><br/>
-            Final version:<br/>
-            April 17, 2021<br/><br/>
-            Conference:<br/>
-            July 7 - July 9, 2021<br/><br/>
-          </div>
-          <div class="organizers">
-            <b>General Chair:</b><br/><br/>
-            Shoji Yuen<br/>
-            <i>Nagoya University, Japan</i><br/><br/>
-            <b>Program Chairs:</b><br/><br/>
-            Shigeru Yamashita<br/>
-            <i>Ritsumeikan University, Japan</i><br/><br/>
-            Tetsuo Yokoyama<br/>
-            <i>Nanzan University, Japan</i>
-          </div>
-          <!--<a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>-->
-        </div>
-      </div>
-      <div class="footer">
-        <a href="/impress">Impress</a> | <a href="/contact">Contact</a>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
