--- a/previous/index.html
+++ b/previous/index.html
@@ -5,7 +5,7 @@ title: Previous Editions
 
 <table class="previous">
   <tr>
-    <td><img width="100" src="/images/pe2020.png" /></td>
+    <td><img width="100" src="{{ "/images/pe2020.png" | relative_url }}" /></td>
     <td>
       <a href="http://reversible-computation-2020.github.io/" target="_blank">12th Conference on Reversible Computation
         (RC 2020)</a><br />
@@ -15,7 +15,7 @@ title: Previous Editions
     </td>
   </tr>
   <tr>
-    <td><img src="/images/pe2019.gif" /></td>
+    <td><img src="{{ "/images/pe2019.gif" | relative_url }}" /></td>
     <td>
       <a href="http://reversible-computation.github.io/" target="_blank">11th Conference on Reversible Computation
         (RC 2019)</a><br />
@@ -25,7 +25,7 @@ title: Previous Editions
     </td>
   </tr>
   <tr>
-    <td><img src="/images/pe2018.gif" /></td>
+    <td><img src="{{ "/images/pe2018.gif" | relative_url }}" /></td>
     <td>
       <a href="http://www.reversible-computation.org/2018/" target="_blank">10th Conference on Reversible Computation
         (RC 2018)</a><br />
@@ -35,7 +35,7 @@ title: Previous Editions
     </td>
   </tr>
   <tr>
-    <td><img src="/images/pe2017.gif" /></td>
+    <td><img src="{{ "/images/pe2017.gif" | relative_url }}" /></td>
     <td>
       <a href="http://www.reversible-computation.org/2017/" target="_blank">9th Conference on Reversible Computation
         (RC 2017)</a><br />
@@ -45,7 +45,7 @@ title: Previous Editions
     </td>
   </tr>
   <tr>
-    <td><img src="/images/pe2016.gif" /></td>
+    <td><img src="{{ "/images/pe2016.gif" | relative_url }}" /></td>
     <td>
       <a href="http://www.reversible-computation.org/2016/" target="_blank">8th Conference on Reversible Computation
         (RC 2016)</a><br />
@@ -55,7 +55,7 @@ title: Previous Editions
     </td>
   </tr>
   <tr>
-    <td><img src="/images/pe2015.gif" /></td>
+    <td><img src="{{ "/images/pe2015.gif" | relative_url }}" /></td>
     <td>
       <a href="http://www.reversible-computation.org/2015/" target="_blank">7th Conference on Reversible Computation
         (RC 2015)</a><br />
@@ -65,7 +65,7 @@ title: Previous Editions
     </td>
   </tr>
   <tr>
-    <td><img src="/images/pe2014.gif" /></td>
+    <td><img src="{{ "/images/pe2014.gif" | relative_url }}" /></td>
     <td>
       <a href="http://www.reversible-computation.org/2014/" target="_blank">6th Conference on Reversible Computation
         (RC 2014)</a><br />
@@ -75,7 +75,7 @@ title: Previous Editions
     </td>
   </tr>
   <tr>
-    <td><img src="/images/pe2013.gif" /></td>
+    <td><img src="{{ "/images/pe2013.gif" | relative_url }}" /></td>
     <td>
       <a href="http://www.reversible-computation.org/2013/" target="_blank">5th Conference on Reversible Computation
         (RC 2013)</a><br />
@@ -85,7 +85,7 @@ title: Previous Editions
     </td>
   </tr>
   <tr>
-    <td><img src="/images/pe2012.gif" /></td>
+    <td><img src="{{ "/images/pe2012.gif" | relative_url }}" /></td>
     <td>
       <a href="http://www.reversible-computation.org/2012/" target="_blank">4th Conference on Reversible Computation
         (RC 2012)</a><br />
@@ -95,7 +95,7 @@ title: Previous Editions
     </td>
   </tr>
   <tr>
-    <td><img src="/images/pe2011.gif" /></td>
+    <td><img src="{{ "/images/pe2011.gif" | relative_url }}" /></td>
     <td>
       <a href="http://www.reversible-computation.org/2011/" target="_blank">3rd Conference on Reversible Computation
         (RC 2011)</a><br />
@@ -105,7 +105,7 @@ title: Previous Editions
     </td>
   </tr>
   <tr>
-    <td><img src="/images/pe2010.gif" /></td>
+    <td><img src="{{ "/images/pe2010.gif" | relative_url }}" /></td>
     <td>
       <a href="http://www.reversible-computation.org/2010/" target="_blank">2nd Conference on Reversible Computation
         (RC 2010)</a><br />
@@ -115,7 +115,7 @@ title: Previous Editions
     </td>
   </tr>
   <tr>
-    <td><img src="/images/pe2009.gif" /></td>
+    <td><img src="{{ "/images/pe2009.gif" | relative_url }}" /></td>
     <td>
       <a href="http://www.cs.le.ac.uk/events/RC2009/" target="_blank">1st Conference on Reversible Computation
         (RC 2009)</a><br />
