--- a/cfp/index.html
+++ b/cfp/index.html
@@ -42,7 +42,7 @@ title: Call for Papers
     <li>work-in-progress or tool demonstration papers (6 pages maximum)</li>
   </ul>
   
-  in <a html="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">Springer LNCS format</a>.  Additional material intended for reviewers but not for publication in the final version---for example, details of proofs---may be placed in a clearly marked appendix that is not included in the page limit. Reviewers are at liberty to ignore appendices and papers must be understandable without them. Contributions must be written in English and report on original, unpublished work, not submitted for publication elsewhere. Submissions not adhering to the specified constraints may be rejected without review.
+  in <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">Springer LNCS format</a>.  Additional material intended for reviewers but not for publication in the final version---for example, details of proofs---may be placed in a clearly marked appendix that is not included in the page limit. Reviewers are at liberty to ignore appendices and papers must be understandable without them. Contributions must be written in English and report on original, unpublished work, not submitted for publication elsewhere. Submissions not adhering to the specified constraints may be rejected without review.
 
 Papers can be submitted electronically in pdf via the RC 2021 interface of the EasyChair system:  <a href="{{ site.links.easychair }}">{{ site.links.easychair }}</a>
 </p>
