--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@ custom_heading: yes
   reversibility in quantum computation. Research papers, tool demonstrations,
   and work-in-progress reports are within the scope of the conference.
 </p>
+<p>
+All accepted papers will be included in the conference proceedings and published by Springer as a Lecture Notes in Computer Science (LNCS) volume.
+</p>
 
 <!--<p>
   The conference proceedings are published by Springer as <a href="https://doi.org/10.1007/978-3-030-52482-1" target="_blank">Lecture Notes in
