--- a/invited/index.html
+++ b/invited/index.html
@@ -3,8 +3,17 @@ layout: default
 title: Invited Talks
 ---
 
-<!--<h2>Perdita Stevens: Problems and Prospects for Bidirectional Transformations</h2>
+<h2>‪Kenichi Morita: TBA</h2>
+<p>
+  (Professor Emeritus, Hiroshima University)
+</p>
 
+<h2>Atsushi Matsuo</h2>
+<p>
+  (IBM Research - Tokyo)
+</p>
+
+<!--
 <p>
   Perdita Stevens is Professor of Mathematics of Software Engineering in the
   School of Informatics of the University of Edinburgh.  After obtaining a PhD
