--- a/invited/index.html
+++ b/invited/index.html
@@ -3,12 +3,20 @@ layout: default
 title: Invited Talks
 ---
 
-<h2>‪Kenichi Morita: TBA</h2>
+<h2>‪Kenichi Morita: How can we construct reversible Turing machines in a very simple reversible cellular automaton?</h2>
 <p>
-  (Professor Emeritus, Hiroshima University)
+  Kenichi Morita is a professor emeritus of Hiroshima University, Japan.  He received his PhD degree from Osaka University in 1978.  From 1974 to 1987, he was a research associate of the Faculty of Engineering Science, Osaka University.  From 1987 to 1990, he was an associate professor, and from 1990 to 1993 a full professor of the Faculty of Engineering, Yamagata University.  From 1993 to 2013, he was a full professor of the Graduate School of Engineering, Hiroshima University. 
+</p>
+<p>
+  Prof. Morita has been engaged in the research of automata theory, cellular automata, formal language theory, and reversible computing.  He started the study of reversible computing in the mid-1980s.  Since then, he studied many kinds of reversible computing models such as reversible Turing machines, reversible counter machines, reversible cellular automata, reversible logic elements, and others.  In particular, he investigated the problem of how simple computationally universal reversible systems can be from the standpoint of automata theory.  He proposed the framework of partitioned cellular automata for designing reversible cellular automata.  Using this framework, he proved that a one-dimensional reversible cellular automaton is computationally universal.  He also proposed reversible logic elements with memory as alternatives to reversible logic gates, and clarified their universality and usefulness. 
 </p>
 
-<h2>Atsushi Matsuo</h2>
+<h2>Shin-ichi Minato: TBA</h2>
+<p>
+  (TBA)
+</p>
+
+<h2>Atsushi Matsuo: TBA</h2>
 <p>
   (IBM Research - Tokyo)
 </p>
