--- a/invited/index.html
+++ b/invited/index.html
@@ -10,6 +10,9 @@ title: Invited Talks
 <p>
   Prof. Morita has been engaged in the research of automata theory, cellular automata, formal language theory, and reversible computing.  He started the study of reversible computing in the mid-1980s.  Since then, he studied many kinds of reversible computing models such as reversible Turing machines, reversible counter machines, reversible cellular automata, reversible logic elements, and others.  In particular, he investigated the problem of how simple computationally universal reversible systems can be from the standpoint of automata theory.  He proposed the framework of partitioned cellular automata for designing reversible cellular automata.  Using this framework, he proved that a one-dimensional reversible cellular automaton is computationally universal.  He also proposed reversible logic elements with memory as alternatives to reversible logic gates, and clarified their universality and usefulness. 
 </p>
+<p>
+  <a href="https://scholar.google.com/citations?user=kujUxFYAAAAJ" target="_blank">Website</a>
+</p>
 
 <h2>Shin-ichi Minato: TBA</h2>
 <p>
